# domo

./: README.md  domo  install.sh  uninstall.sh  update.sh
backends/: shell  tmux  vscode
src/: _install_command.sh  _uninstall_command.sh  backend_add_command.sh  backend_get_command.sh  backend_list_command.sh  backend_set_command.sh  backend_show_command.sh  backend_which_command.sh  bashly.yml  clone_command.sh  create_command.sh  exec_command.sh  open_command.sh  space_add_command.sh  template_add_command.sh
src/lib/backends/: backend_exists.sh  filter_backends.sh  find_backend.sh  get_global_backend.sh  list_backends.sh  raw_list_backends.sh  set_global_backend.sh
src/lib/log/: error.sh  info.sh  success.sh  warn.sh
src/lib/projects/: list_projects.sh  project_exists.sh
src/lib/spaces/: filter_spaces.sh  list_spaces.sh  space_exists.sh
src/lib/templates/: filter_templates.sh  find_template.sh  list_templates.sh  raw_list_templates.sh  template_exists.sh
src/lib/validations/: validate_project_exists.sh  validate_project_is_missing.sh  validate_space_is_missing.sh
templates/: cargo  dune  git  mix  python  vite
