# vim: set filetype=sh:
#
# BEWARE: This is a default template. It is managed internally and may be overridden!
#
# Information about the project are passed as environment variables in the following way:
#
# SPACE        - name of the space the project must be created in.
#
# SPACE_PATH   - absolute path to the space directory.
#
# PROJECT      - name of the project that must be created.
#
# PROJECT_PATH - absolute path to the project directory.
#
cd "${SPACE_PATH}"

dune init project "${PROJECT}"

git -C "${PROJECT_PATH}" init

echo _build > .gitignore
